	PR c++/39413 	* search.c (lookup_base): Don't complete_type (base).

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@153920 138bc75d-0d04-0410-961f-82ee72b054a4